--- a/style.css
+++ b/style.css
@@ -3,12 +3,13 @@
 }
 
 #pacman {
-    width: 24px;
-    height: 24px;
+    width: 20px;
+    height: 20px;
     background: #fff;
     display: none;
-    z-index: 50;
-    position: absolute;
+    z-index: 5;
+    /* position: absolute; */
+    transition : 0.4s ease;
 }
 
 #grid {
