--- a/style.css
+++ b/style.css
@@ -2,18 +2,22 @@
   position: relative;
 }
 
-#pacman {
+
+.pacman {
   width: 20px;
   height: 20px;
   background: #fff;
-  /* display: block; */
   z-index: 3;
-  /* transition: 0.2s; */
+
   position: absolute;
+  will-change: transform;
   transform: translate(425px, 695px);
+  display: block;
+  transition: .2s ease;
+  -moz-transition: .2s ease;
 }
 
-#grid {
+.grid {
   z-index: 1;
   margin: auto;
   justify-content: center;
@@ -55,125 +59,6 @@ body {
   font-size: 24px;
 }
 
-.pacman {
-  position: relative;
-  width: 80%;
-  height: 80%;
-  top: 10%;
-  left: 10%;
-  border-radius: 50%;
-  background-color: #fff;
-  /* background-image: url("./test.jpg"); */
-  background-repeat: no-repeat;
-  background-size: cover;
-  z-index: 3;
-}
-
-.pacman_eye {
-  position: absolute;
-  top: 20%;
-  left: 30%;
-  width: 20%;
-  height: 20%;
-  background-color: #000;
-  z-index: 3;
-  border-radius: 50%;
-}
-
-.pacman_mouth {
-  position: absolute;
-  bottom: 10%;
-  background: #000;
-  left: 1%;
-  bottom: 20%;
-  width: 50%;
-  height: 25%;
-  border-radius: 0% 50% 50% 50%;
-  z-index: 3;
-}
-
-.grid {
-  margin: auto;
-  justify-content: center;
-  display: grid;
-  /* background-color: black; */
-  overflow: hidden;
-  position: relative;
-}
-
-.ghost {
-  position: relative;
-  height: 90%;
-  width: 80%;
-  top: 0;
-  left: 10%;
-  border: 1px solid black;
-  border-radius: 8px;
-  z-index: 3;
-}
-
-.pinky {
-  background: pink;
-}
-
-.orange {
-  background: orange;
-}
-
-.red {
-  background: red;
-}
-
-.green {
-  background: green;
-}
-
-.left_eye {
-  position: absolute;
-  width: 25%;
-  height: 30%;
-  background: #fff;
-  z-index: 3;
-  border: 0.5px solid red;
-  top: 20%;
-  left: 10%;
-  border-radius: 50%;
-}
-
-.left_eye::before {
-  content: "";
-  z-index: -1;
-  position: inherit;
-  width: 80%;
-  height: 60%;
-  bottom: -3%;
-  left: 20%;
-  border-radius: 50% 50% 40% 40%;
-  background: #000;
-}
-
-.right_eye {
-  position: absolute;
-  width: 25%;
-  height: 30%;
-  background: #fff;
-  top: 20%;
-  right: 10%;
-  border: 0.5px solid red;
-  border-radius: 50%;
-}
-
-.right_eye::before {
-  content: "";
-  position: inherit;
-  width: 80%;
-  height: 60%;
-  bottom: -3%;
-  left: 20%;
-  border-radius: 50% 50% 40% 40%;
-  background: #000;
-}
-
 .coin {
   position: absolute;
   left: 35%;
@@ -182,7 +67,8 @@ body {
   height: 25%;
   background-color: gold;
   border-radius: 50%;
-  opacity: 1;
+  
+  will-change: opacity;
 }
 
 .cookie {
@@ -207,14 +93,6 @@ body {
   position: relative;
 }
 
-.scoreBoard {
-  color: #fff;
-  display: flex;
-  justify-content: center;
-  padding: 20px 10px 20px 0px;
-  font-size: 24px;
-}
-
 .mainPage {
   background-color: #000;
   display: flex;
@@ -223,89 +101,4 @@ body {
   overflow: hidden;
   padding: 0;
   margin: 0;
-}
-
-.logo {
-  margin: 150px auto;
-  display: flex;
-  justify-content: center;
-}
-
-.logo img {
-  width: 75%;
-  height: auto;
-}
-
-.links a {
-  margin-bottom: 15px;
-  color: #fff;
-  font-size: 1.7em;
-  opacity: 1;
-  text-decoration: none;
-}
-
-.links a:hover {
-  opacity: 0.5;
-}
-
-.links {
-  display: flex;
-  flex-direction: column;
-}
-
-.menu {
-  display: flex;
-  align-items: center;
-  flex-direction: column;
-}
-
-.menu img {
-  width: 50%;
-  height: auto;
-}
-
-.modal {
-  color: #fff;
-  position: fixed;
-  z-index: 4;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background-color: rgb(0, 0, 0);
-  background-color: rgba(0, 0, 0, 0.4);
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-}
-
-.modal a {
-  font-size: 20px;
-  text-align: center;
-  opacity: 0.7;
-  margin-bottom: 10px;
-  width: 10%;
-  padding: 10px;
-  background: yellow;
-  color: #000;
-}
-
-.modal a:hover {
-  opacity: 1;
-  cursor: pointer;
-}
-
-.instr {
-  font-size: 28px;
-  color: #fff;
-  background-color: rgba(0, 0, 0, 0.4);
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  width: 386px;
-  height: 50px;
-  position: absolute;
-  top: 50%;
-  left: 40%;
-  z-index: 4;
 }
