--- a/style.css
+++ b/style.css
@@ -9,13 +9,12 @@
   position: absolute;
 
   will-change: transform;
-  -moz-transform:translate(425px, 695px) ;
+  -moz-transform: translate(425px, 695px);
   transform: translate(425px, 695px);
   display: block;
-  will-change: transition;
-  transition: .2s ease;
-  -moz-transition: .2s ease;
-  
+  /* will-change: transition; */
+  transition: 0.2s ease;
+  -moz-transition: 0.2s ease;
 }
 
 .grid {
@@ -54,7 +53,7 @@ body {
   height: 25%;
   background-color: gold;
   border-radius: 50%;
-  /* will-change: opacity; */
+  will-change: opacity;
 }
 
 .cookie {
