--- a/style.css
+++ b/style.css
@@ -7,14 +7,14 @@
   height: 20px;
   background: #fff;
   position: absolute;
-
+  display: block;
   will-change: transform;
   -moz-transform: translate(425px, 695px);
+  -webkit-transform: translate(425px, 695px);
   transform: translate(425px, 695px);
-  display: block;
-  /* will-change: transition; */
   transition: 0.2s ease;
-  -moz-transition: 0.2s ease;
+  /* -moz-transition: 0.2s ease;
+  -webkit-transition: 0.2s ease; */
 }
 
 .grid {
@@ -53,6 +53,7 @@ body {
   height: 25%;
   background-color: gold;
   border-radius: 50%;
+  opacity: 1;
   will-change: opacity;
 }
 
