--- a/style.css
+++ b/style.css
@@ -1,7 +1,3 @@
-#mainPage {
-  position: relative;
-}
-
 .pacman {
   width: 20px;
   height: 20px;
@@ -9,16 +5,15 @@
   position: absolute;
   display: block;
   will-change: transform;
-  -moz-transform: translate(425px, 695px);
+  /* -moz-transform: translate(425px, 695px);
   -webkit-transform: translate(425px, 695px);
-  transform: translate(425px, 695px);
-  transition: 0.2s ease;
-  /* -moz-transition: 0.2s ease;
-  -webkit-transition: 0.2s ease; */
+  transform: translate(425px, 695px); */
+  -moz-transition: 0.1s ease;
+  -webkit-transition: 0.1s ease;
+  transition: 0.1s ease;
 }
 
 .grid {
-  margin: auto;
   justify-content: center;
   display: grid;
   overflow: hidden;
@@ -74,7 +69,6 @@ body {
 }
 
 .box {
-  font-size: 3rem;
   text-align: center;
   position: relative;
 }
@@ -87,4 +81,5 @@ body {
   overflow: hidden;
   padding: 0;
   margin: 0;
+  position: relative;
 }
