--- a/style.css
+++ b/style.css
@@ -23,7 +23,8 @@
         background-color: #fff;
         will-change: transform;
         z-index: 2;
-        /* transition: 0.1s ease; */
+        transition: 0.2s ease;
+        position: absolute;
     }
     
     .pacman_eye {
@@ -44,6 +45,7 @@
         left: 1%;
         bottom: 20%;
         width: 50%;
+        will-change: transform;
         height: 25%;
         border-radius: 0% 50% 50% 50%;
         z-index: 3;
