--- a/style.css
+++ b/style.css
@@ -23,7 +23,7 @@
         background-color: #fff;
         will-change: transform;
         z-index: 2;
-        transition: 0.2s ease;
+        /* transition: 0.2s ease; */
         position: absolute;
     }
     
