--- a/style.css
+++ b/style.css
@@ -1,270 +1,275 @@
-    body {
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        overflow: hidden;
-        padding: 0;
-        margin: 0;
-        background: #000;
-        box-sizing: border-box;
-    }
-    
-    .grid {
-        justify-content: center;
-        display: grid;
-        overflow: hidden;
-        position: relative;
-    }
-    
-    .pacman {
-        width: 20px;
-        height: 20px;
-        border-radius: 50%;
-        background-color: #fff;
-        will-change: transform;
-        z-index: 2;
-        /* transition: 0.2s ease; */
-        position: absolute;
-    }
-    
-    .pacman_eye {
-        position: absolute;
-        top: 20%;
-        left: 30%;
-        width: 20%;
-        height: 20%;
-        background-color: #000;
-        z-index: 3;
-        border-radius: 50%;
-    }
-    
-    .pacman_mouth {
-        position: absolute;
-        bottom: 10%;
-        background: #000;
-        left: 1%;
-        bottom: 20%;
-        width: 50%;
-        will-change: transform;
-        height: 25%;
-        border-radius: 0% 50% 50% 50%;
-        z-index: 3;
-    }
-    
-    .doorEnemy {
-        background: red;
-        width: 30px;
-        height: 30px;
-    }
-    
-    .teleport {
-        background-color: blue;
-        width: 30px;
-        height: 30px;
-    }
-    
-    .coin {
-        position: absolute;
-        left: 35%;
-        top: 35%;
-        width: 25%;
-        height: 25%;
-        background-color: gold;
-        border-radius: 50%;
-        opacity: 1;
-        will-change: opacity;
-    }
-    
-    .cookie {
-        position: absolute;
-        left: 15%;
-        top: 15%;
-        width: 70%;
-        height: 70%;
-        background-color: orange;
-        border-radius: 50%;
-    }
-    
-    .wall {
-        background-color: blue;
-        width: 100%;
-        height: 100%;
-    }
-    
-    .box {
-        text-align: center;
-        position: relative;
-    }
-    
-    #stats {
-        padding: 10px;
-        color: #fff;
-        font-size: 24px;
-    }
-    
-    .ghost {
-        position: relative;
-        height: 90%;
-        width: 80%;
-        top: 0;
-        left: 10%;
-        border: 1px solid black;
-        border-radius: 8px;
-        z-index: 3;
-        display: none;
-    }
-    
-    .pinky {
-        background: pink;
-    }
-    
-    .orange {
-        background: orange;
-    }
-    
-    .red {
-        background: red;
-    }
-    
-    .cyan {
-        background: cyan;
-    }
-    
-    .left_eye {
-        position: absolute;
-        width: 25%;
-        height: 30%;
-        background: #fff;
-        z-index: 3;
-        border: 0.5px solid red;
-        top: 20%;
-        left: 10%;
-        border-radius: 50%;
-    }
-    
-    .left_eye::before {
-        content: "";
-        z-index: -1;
-        position: inherit;
-        width: 80%;
-        height: 60%;
-        bottom: -3%;
-        left: 20%;
-        border-radius: 50% 50% 40% 40%;
-        background: #000;
-    }
-    
-    .right_eye {
-        position: absolute;
-        width: 25%;
-        height: 30%;
-        font background: #fff;
-        top: 20%;
-        right: 10%;
-        border: 0.5px solid red;
-        border-radius: 50%;
-    }
-    
-    .right_eye::before {
-        content: "";
-        position: inherit;
-        width: 80%;
-        height: 60%;
-        bottom: -3%;
-        left: 20%;
-        border-radius: 50% 50% 40% 40%;
-        background: #000;
-    }
-    
-    .scoreBoard {
-        color: #fff;
-        display: flex;
-        justify-content: center;
-        padding: 20px 10px 20px 0px;
-        font-size: 24px;
-    }
-    
-    .logo {
-        margin: 150px auto;
-        display: flex;
-        justify-content: center;
-    }
-    
-    .logo img {
-        width: 75%;
-        height: auto;
-    }
-    
-    .links a {
-        margin-bottom: 15px;
-        color: #fff;
-        font-size: 1.7em;
-        opacity: 1;
-        text-decoration: none;
-    }
-    
-    .links a:hover {
-        opacity: 0.5;
-    }
-    
-    .links {
-        display: flex;
-        flex-direction: column;
-    }
-    
-    .menu {
-        display: flex;
-        align-items: center;
-        flex-direction: column;
-    }
-    
-    .menu img {
-        width: 50%;
-        height: auto;
-    }
-    
-    .modal {
-        display: none;
-        color: #fff;
-        position: fixed;
-        z-index: 4;
-        top: 0;
-        left: 0;
-        width: 100%;
-        height: 100%;
-        background-color: rgb(0, 0, 0);
-        background-color: rgba(0, 0, 0, 0.4);
-        flex-direction: column;
-        align-items: center;
-        justify-content: center;
-    }
-    
-    .modal a {
-        font-size: 20px;
-        text-align: center;
-        opacity: 0.7;
-        margin-bottom: 10px;
-        width: 10%;
-        padding: 10px;
-        background: yellow;
-        color: #000;
-    }
-    
-    .modal a:hover {
-        opacity: 1;
-        cursor: pointer;
-    }
-    
-    .notify {
-        font-size: 28px;
-        color: #fff;
-        background-color: rgba(0, 0, 0, 0.4);
-        align-items: center;
-        justify-content: center;
-        width: 386px;
-        height: 50px;
-        position: absolute;
-        top: 50%;
-        left: 40%;
-        z-index: 4;
-    }
+body {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  overflow: hidden;
+  padding: 0;
+  margin: 0;
+  background: #000;
+  box-sizing: border-box;
+}
+
+.grid {
+  justify-content: center;
+  display: grid;
+  overflow: hidden;
+  position: relative;
+}
+
+.pacman {
+  width: 20px;
+  height: 20px;
+  border-radius: 50%;
+  background-color: #fff;
+  /* transition: transform .2s ease; */
+  will-change: transform;
+  display: none;
+  z-index: 2;
+  position: absolute;
+}
+
+.pacman_eye {
+  position: absolute;
+  top: 20%;
+  left: 30%;
+  width: 20%;
+  height: 20%;
+  background-color: #000;
+  z-index: 3;
+  border-radius: 50%;
+}
+
+.pacman_mouth {
+  position: absolute;
+  bottom: 10%;
+  background: #000;
+  left: 1%;
+  bottom: 20%;
+  width: 50%;
+  will-change: transform;
+  height: 25%;
+  border-radius: 0% 50% 50% 50%;
+  z-index: 3;
+}
+
+.doorEnemy {
+  background: red;
+  width: 30px;
+  height: 30px;
+}
+
+.teleport {
+  background-color: blue;
+  width: 30px;
+  height: 30px;
+}
+
+.coin {
+  position: absolute;
+  left: 35%;
+  top: 35%;
+  width: 25%;
+  height: 25%;
+  background-color: gold;
+  border-radius: 50%;
+  will-change: opacity;
+}
+
+.cookie {
+  position: absolute;
+  left: 15%;
+  top: 15%;
+  width: 70%;
+  height: 70%;
+  background-color: orange;
+  border-radius: 50%;
+}
+
+.wall {
+  background-color: blue;
+  width: 100%;
+  height: 100%;
+}
+
+.box {
+  text-align: center;
+  position: relative;
+}
+
+#stats {
+  padding: 10px;
+  color: #fff;
+  font-size: 24px;
+}
+
+.ghost {
+  position: absolute;
+  border: 1px solid black;
+  border-radius: 4px;
+  z-index: 3;
+  width: 22px;
+  height: 22px;
+}
+
+.pink {
+  background: pink;
+  transform: translate3d(360px, 420px, 0px);
+  will-change: transform;
+}
+
+.orange {
+  background: orange;
+  transform: translate3d(390px, 420px, 0px);
+  will-change: transform;
+}
+
+.red {
+  background: red;
+  transform: translate3d(420px, 420px, 0px);
+  will-change: transform;
+}
+
+.cyan {
+  background: cyan;
+  transform: translate3d(450px, 420px, 0px);
+  will-change: transform;
+}
+
+.left_eye {
+  position: absolute;
+  width: 25%;
+  height: 30%;
+  background: #fff;
+  z-index: 3;
+  border: 0.5px solid red;
+  top: 20%;
+  left: 10%;
+  border-radius: 50%;
+}
+
+.left_eye::before {
+  content: "";
+  z-index: -1;
+  position: inherit;
+  width: 80%;
+  height: 60%;
+  bottom: -3%;
+  left: 20%;
+  border-radius: 50% 50% 40% 40%;
+  background: #000;
+}
+
+.right_eye {
+  position: absolute;
+  width: 25%;
+  height: 30%;
+  background: #fff;
+  top: 20%;
+  right: 10%;
+  border: 0.5px solid red;
+  border-radius: 50%;
+}
+
+.right_eye::before {
+  content: "";
+  position: inherit;
+  width: 80%;
+  height: 60%;
+  bottom: -3%;
+  left: 20%;
+  border-radius: 50% 50% 40% 40%;
+  background: #000;
+}
+
+.scoreBoard {
+  color: #fff;
+  display: flex;
+  justify-content: center;
+  padding: 20px 10px 20px 0px;
+  font-size: 24px;
+}
+
+.logo {
+  margin: 150px auto;
+  display: flex;
+  justify-content: center;
+}
+
+.logo img {
+  width: 75%;
+  height: auto;
+}
+
+.links a {
+  margin-bottom: 15px;
+  color: #fff;
+  font-size: 1.7em;
+  opacity: 1;
+  text-decoration: none;
+}
+
+.links a:hover {
+  opacity: 0.5;
+}
+
+.links {
+  display: flex;
+  flex-direction: column;
+}
+
+.menu {
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+}
+
+.menu img {
+  width: 50%;
+  height: auto;
+}
+
+.modal {
+  display: none;
+  color: #fff;
+  position: fixed;
+  z-index: 4;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgb(0, 0, 0);
+  background-color: rgba(0, 0, 0, 0.4);
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.modal a {
+  font-size: 20px;
+  text-align: center;
+  opacity: 0.7;
+  margin-bottom: 10px;
+  width: 10%;
+  padding: 10px;
+  background: yellow;
+  color: #000;
+}
+
+.modal a:hover {
+  opacity: 1;
+  cursor: pointer;
+}
+
+.notify {
+  font-size: 28px;
+  color: #fff;
+  background-color: rgba(0, 0, 0, 0.4);
+  align-items: center;
+  justify-content: center;
+  width: 386px;
+  height: 50px;
+  position: absolute;
+  top: 50%;
+  left: 40%;
+  z-index: 4;
+}
