--- a/style.css
+++ b/style.css
@@ -21,7 +21,7 @@ body {
   height: 20px;
   border-radius: 50%;
   background-color: #fff;
-  transition: transform 0.2s ease;
+  /* transition: transform 0.2s ease; */
   will-change: transform;
   -moz-will-change: transform;
   /* display: none; */
