--- a/style.css
+++ b/style.css
@@ -24,7 +24,6 @@ body {
   /* transition: transform 0.2s ease; */
   will-change: transform;
   -moz-will-change: transform;
-  /* display: none; */
   z-index: 2;
   position: absolute;
 }
@@ -53,19 +52,16 @@ body {
   border-radius: 0% 50% 50% 50%;
   z-index: 3;
 }
-
 .doorEnemy {
   background: red;
   width: 30px;
   height: 30px;
 }
-
 .teleport {
   background-color: blue;
   width: 30px;
   height: 30px;
 }
-
 .coin {
   position: absolute;
   left: 35%;
@@ -77,7 +73,6 @@ body {
   will-change: opacity;
   -moz-will-change: opacity;
 }
-
 .cookie {
   position: absolute;
   left: 15%;
@@ -87,24 +82,20 @@ body {
   background-color: orange;
   border-radius: 50%;
 }
-
 .wall {
   background-color: blue;
   width: 100%;
   height: 100%;
 }
-
 .box {
   text-align: center;
   position: relative;
 }
-
 #stats {
   padding: 10px;
   color: #fff;
   font-size: 24px;
 }
-
 .ghost {
   position: absolute;
   border: 1px solid black;
@@ -113,14 +104,12 @@ body {
   width: 22px;
   height: 22px;
 }
-
 .pink {
   background: pink;
   -moz-will-change: transform;
   will-change: transform;
   transform: translate3d(360px, 420px, 0px);
 }
-
 .orange {
   background: orange;
   will-change: transform;
@@ -133,6 +122,7 @@ body {
   -moz-will-change: transform;
   will-change: transform;
   transform: translate3d(420px, 420px, 0px);
+  /* transition: transform 0.2s ease; */
 }
 
 .cyan {
@@ -140,6 +130,7 @@ body {
   -moz-will-change: transform;
   will-change: transform;
   transform: translate3d(450px, 420px, 0px);
+  /* transition: transform 0.2s; */
 }
 
 .left_eye {
