--- a/style.css
+++ b/style.css
@@ -20,10 +20,10 @@ body {
   width: 20px;
   height: 20px;
   border-radius: 50%;
-  background-color: #fff;
-  /* transition: transform 0.2s ease; */
+  background-color: yellow;
+  transition: transform 0.2s ease;
   will-change: transform;
-  -moz-will-change: transform;
+
   z-index: 2;
   position: absolute;
 }
@@ -46,7 +46,6 @@ body {
   left: 1%;
   bottom: 20%;
   width: 50%;
-  -moz-will-change: transform;
   will-change: transform;
   height: 25%;
   border-radius: 0% 50% 50% 50%;
@@ -71,7 +70,6 @@ body {
   background-color: gold;
   border-radius: 50%;
   will-change: opacity;
-  -moz-will-change: opacity;
 }
 .cookie {
   position: absolute;
@@ -105,32 +103,33 @@ body {
   height: 22px;
 }
 .pink {
+  will-change: opacity;
   background: pink;
-  -moz-will-change: transform;
   will-change: transform;
   transform: translate3d(360px, 420px, 0px);
+  transition: transform 0.2s;
 }
 .orange {
+  will-change: opacity;
   background: orange;
   will-change: transform;
-  -moz-will-change: transform;
   transform: translate3d(390px, 420px, 0px);
+  transition: transform 0.2s;
 }
 
 .red {
+  will-change: opacity;
   background: red;
-  -moz-will-change: transform;
-  will-change: transform;
   transform: translate3d(420px, 420px, 0px);
-  /* transition: transform 0.2s ease; */
+  transition: transform 0.2s ease;
 }
 
 .cyan {
+  will-change: opacity;
   background: cyan;
-  -moz-will-change: transform;
   will-change: transform;
   transform: translate3d(450px, 420px, 0px);
-  /* transition: transform 0.2s; */
+  transition: transform 0.2s;
 }
 
 .left_eye {
