--- a/style.css
+++ b/style.css
@@ -28,6 +28,25 @@ body {
   position: absolute;
   display: block;
 }
+.history-container {
+  height: 100vh;
+  width: 100vw;
+  background: #000;
+  display: flex;
+  font-size: 24px;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  padding: 20px;
+  z-index: 10;
+}
+
+.history-container span:nth-child(2) {
+  position: absolute;
+  top: 0;
+  font-size: 24px;
+  color: pink;
+}
 
 .pacman-death {
   animation: mymove 1s;
