--- a/client/statics/style.css
+++ b/client/statics/style.css
@@ -26,6 +26,24 @@ body {
     width: 50%;
 }
 
+.textPercent {
+    color: #fff;
+    font-size: 20px;
+}
+
+#score {
+    display: flex;
+    flex-direction: column-reverse;
+}
+
+.numpage {
+    color: red;
+}
+
+#tableId {
+    color: #fff;
+}
+
 .grid {
     justify-content: center;
     display: grid;
@@ -281,9 +299,26 @@ body {
     top: 5%;
 }
 
+.scoreMenu a {
+    color: red;
+    font-size: 24px;
+    padding: 10px;
+    opacity: 1;
+}
+
+.scoreMenu a:hover {
+    cursor: pointer;
+    opacity: .5;
+}
+
+.scoreMenu {
+    background: #fff;
+    max-width: 400px;
+}
+
 .gameMenu {
     display: none;
-    width: 400px;
+    max-width: 400px;
     margin: 20% auto 0;
 }
 
