score input style

--- a/client/statics/style.css
+++ b/client/statics/style.css
@@ -39,7 +39,11 @@ body {
 .numpage {
     color: red;
 }
-
+.addScore {
+    position: absolute;
+    left: 40%;
+    top: 50%;
+}
 #tableId {
     color: #fff;
 }
